tests/compError/builtinDoesNotExist.ucl
// compError
// error: no builtin named 'veryUniqueBuiltinNameThatWillNeverHaveAnImplementation'
// tests/compError/builtinDoesNotExist.ucl:5 -> here

@veryUniqueBuiltinNameThatWillNeverHaveAnImplementation()